--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.2'
-	id 'io.spring.dependency-management' version '1.1.2'
+	id 'org.springframework.boot' version '3.1.3'
+	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'com.folder'
+group = 'app'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -16,7 +16,7 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 }
- 
+
 repositories {
 	mavenCentral()
 }
